--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,6 @@ android {
 }
 
 
-
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -79,5 +78,29 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
 
+    //Koin 
+
+    def koin_version= "3.2.2"
+    def koin_android_version= "3.2.2"
+    def koin_android_compose_version= "3.2.1"
+    def koin_ktor= "3.2.2"
+
+    // Koin Core features
+    implementation "io.insert-koin:koin-core:$koin_version"
+// Koin Test features
+    testImplementation "io.insert-koin:koin-test:$koin_version"
+
+    // Koin main features for Android
+    implementation "io.insert-koin:koin-android:$koin_android_version"
+// No more koin-android-viewmodel, koin-android-scope, koin-android-fragment
+
+// Java Compatibility
+    implementation "io.insert-koin:koin-android-compat:$koin_android_version"
+// Jetpack WorkManager
+    implementation "io.insert-koin:koin-androidx-workmanager:$koin_android_version"
+// Navigation Graph
+    implementation "io.insert-koin:koin-androidx-navigation:$koin_android_version"
+
 
 }
+
