--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.newtestting3"
@@ -19,7 +19,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -47,60 +48,30 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.squareup.retrofit2:retrofit:2.2.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.squareup.picasso:picasso:2.8'
 
-    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.5.1"
-
-    implementation "androidx.lifecycle:lifecycle-viewmodel:2.5.1"
-
-    implementation "androidx.lifecycle:lifecycle-livedata:2.5.1"
-
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
 
     implementation 'com.paytabs:payment-sdk:6.3.3'
 
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
-
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
 
     //Koin 
 
-    def koin_version= "3.2.2"
-    def koin_android_version= "3.2.2"
-    def koin_android_compose_version= "3.2.1"
-    def koin_ktor= "3.2.2"
+    def koin_version = "3.2.2"
+    def koin_android_version = "3.2.2"
 
     // Koin Core features
     implementation "io.insert-koin:koin-core:$koin_version"
-// Koin Test features
-    testImplementation "io.insert-koin:koin-test:$koin_version"
 
     // Koin main features for Android
     implementation "io.insert-koin:koin-android:$koin_android_version"
-// No more koin-android-viewmodel, koin-android-scope, koin-android-fragment
-
-// Java Compatibility
-    implementation "io.insert-koin:koin-android-compat:$koin_android_version"
-// Jetpack WorkManager
-    implementation "io.insert-koin:koin-androidx-workmanager:$koin_android_version"
-// Navigation Graph
-    implementation "io.insert-koin:koin-androidx-navigation:$koin_android_version"
-
 
 }
 
