--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,12 @@
 
     <application
         android:name=".UI.Main.Application"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.TestingNew"
-        tools:targetApi="31">
+        android:icon="@color/bt_black_38"
+        android:label="Shopping App"
+        android:roundIcon="@style/Theme.Design"
+        android:theme="@style/Theme.AppCompat.Light"
+        tools:targetApi="31"
+        tools:ignore="DataExtractionRules,HardcodedDebugMode">
         <activity
             android:name=".UI.ThanksPage"
             android:exported="false" />
